@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.osgi.test.provisioning.internal;
 
 import java.io.File;
@@ -22,28 +23,62 @@ import junit.framework.TestCase;
 
 public class MavenArtifactFinderTest extends TestCase {
 
-	public void testFindMyArtifact()throws IOException {
-		MavenPackagedArtifactFinder finder = 
-			new MavenPackagedArtifactFinder("test-artifact","1.0-SNAPSHOT", "jar");
-		File found = finder.findPackagedArtifact(new File("src/test/resources/org/springframework/osgi/test"));
+	private static final String GROUP_ID = "foo";
+	private static final String PATH = "src/test/resources/org/springframework/osgi/test";
+
+
+	public void testFindMyArtifact() throws IOException {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder(GROUP_ID, "test-artifact", "1.0-SNAPSHOT",
+			"jar");
+		File found = finder.findPackagedArtifact(new File(PATH));
 		assertNotNull(found);
 		assertTrue(found.exists());
 	}
 
-	public void testFindChildArtifact()throws IOException {
-		MavenPackagedArtifactFinder finder = 
-			new MavenPackagedArtifactFinder("test-child-artifact","1.0-SNAPSHOT", "jar");
-		File found = finder.findPackagedArtifact(new File("src/test/resources/org/springframework/osgi/test"));
+	public void testFindChildArtifact() throws IOException {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder(GROUP_ID, "test-child-artifact",
+			"1.0-SNAPSHOT", "jar");
+		File found = finder.findPackagedArtifact(new File(PATH));
 		assertNotNull(found);
 		assertTrue(found.exists());
 	}
 
-	public void testFindParentArtifact()throws IOException {
-		MavenPackagedArtifactFinder finder = 
-			new MavenPackagedArtifactFinder("test-artifact","1.0-SNAPSHOT", "jar");
-		File found = finder.findPackagedArtifact(new File("src/test/resources/org/springframework/osgi/test/child"));
+	public void testFindParentArtifact() throws IOException {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder(GROUP_ID, "test-artifact", "1.0-SNAPSHOT",
+			"jar");
+		File found = finder.findPackagedArtifact(new File(PATH + "/child"));
 		assertNotNull(found);
 		assertTrue(found.exists());
 	}
 
+	public void testSameArtifactIdInTwoDifferentGroupsWithGroup1() throws Exception {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder("group1", "artifact", "1.0", "jar");
+		File found = finder.findPackagedArtifact(new File(PATH));
+		assertNotNull(found);
+		assertTrue(found.exists());
+		assertTrue(found.getAbsolutePath().indexOf("group1") > -1);
+		// make sure group2 is not selected
+		assertFalse(found.getAbsolutePath().indexOf("group2") > -1);
+	}
+
+	public void testSameArtifactIdInTwoDifferentGroupsWithGroup2() throws Exception {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder("group2", "artifact", "1.0", "jar");
+		File found = finder.findPackagedArtifact(new File(PATH));
+		assertNotNull(found);
+		assertTrue(found.exists());
+		assertTrue(found.getAbsolutePath().indexOf("group2") > -1);
+		// make sure group2 is not selected
+		assertFalse(found.getAbsolutePath().indexOf("group1") > -1);
+	}
+
+	public void testPomWithoutAGroupId() throws Exception {
+		MavenPackagedArtifactFinder finder = new MavenPackagedArtifactFinder("non-existing", "badpom", "1.0", "jar");
+		try {
+			File found = finder.findPackagedArtifact(new File(PATH));
+			fail("expected exception");
+		}
+		catch (Exception ex) {
+			//expected
+		}
+	}
 }
