@@ -1,0 +1,3 @@
+<bla>
+  <groupId>foo</groupId>
+</bla>
