@@ -1,1 +1,3 @@
-<!--  this file deliberately empty!  -->
+<project>
+  <groupId>foo</groupId>
+</project>
